src/app/globals.css
@import 'tailwindcss';

:root {
    interpolate-size: allow-keywords; /* To animate auto-height on accordion component */

    --primary: oklch(27.177% 0.02119 153.349);
    --secondary: oklch(85.935% 0.03553 153.292);
    --accent: oklch(71.967% 0.18251 153.746);
}

[data-theme='light'] {
    --primary: oklch(85.935% 0.03553 153.292);
    --secondary: oklch(29.658% 0.04127 153.001);
    --accent: oklch(75.958% 0.19968 151.682);
}

@theme inline {
    --color-primary: var(--primary);
    --color-secondary: var(--secondary);
    --color-accent: var(--accent);

    --font-primary: var(--font-acma);
    --font-secondary: var(--font-noto);
    --font-mono: var(--font-geist-mono);

    --radius-huge: 8rem;

    --text-display-large: 147px;
    --text-display-medium: 103px;
    --text-display-small: 62px;
    --text-headline-large: 51px;
    --text-headline-medium: 40px;
    --text-headline-small: 32px;
    --text-title-large: 22px;
    --text-title-medium: 20px;
    --text-title-small: 18px;
    --text-body-large: 18px;
    --text-body-medium: 16px;
    --text-body-small: 14px;
    --text-label-large: 14px;
    --text-label-medium: 12px;
    --text-label-small: 10px;

    --max-width: 1800px;

    /* Heights based on Tailwind's spacing scale: --spacing: 0.25rem /* 4px */
    --header-height: calc(var(--spacing) * 16) /* [16] 4rem = 64px */;
    --footer-height: 600px;

    /* Minimap dimensions */
    --minimap-width: 180px;
}

@layer base {
    *,
    *::before,
    *::after {
        box-sizing: border-box;
    }

    * {
        margin: 0;
        padding: 0;
    }

    * {
        scrollbar-width: thin;
        scrollbar-color: var(--primary) var(--secondary);
    }

    /* Chrome, Edge, and Safari */
    *::-webkit-scrollbar {
        width: 12px;
    }

    *::-webkit-scrollbar-track {
        background: var(--primary);
    }

    *::-webkit-scrollbar-thumb {
        background-color: var(--secondary);
    }

    button {
        @apply cursor-pointer;
    }

    h1 {
        font-family: var(--font-acma);
    }

    .underlined-link {
        @apply relative inline-block w-fit cursor-pointer overflow-x-clip text-secondary no-underline;
    }

    .underlined-link::after {
        @apply absolute bottom-[2px] left-0 z-50 h-px w-full -translate-x-[102%] bg-current transition-transform duration-300 content-[''];
    }

    .underlined-link:hover::after,
    .active.underlined-link::after {
        @apply translate-x-0;
    }
}

